--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "test": "cross-env MODE=test node main.js"
   },
   "dependencies": {
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "colors": "^1.3.2",
     "commander": "^2.19.0",
+    "cross-env": "^5.2.0",
     "shelljs": "^0.8.3"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
