--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "cross-env MODE=test node main.js"
   },
   "dependencies": {
+    "change-case": "^3.0.2",
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "colors": "^1.3.2",
